Add Android Studio 3.2 Canary 6 link

--- a/index.html
+++ b/index.html
@@ -351,6 +351,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Canary 6 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 6</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.5/android-studio-ide-173.4640885-windows.zip">android-studio-ide-173.4640885-windows.zip</a>
+                                </td>
+                                <td>1015484084 bytes</td>
+                                <td>98eab0e712b3721addd9c3f6bb9ec7bdfc53a7da7af0dfce7ed360fa8ae50268</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1fpaxnimbbbj316c0cd774.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.5/android-studio-ide-173.4640885-windows32.zip">android-studio-ide-173.4640885-windows32.zip</a>
+                                </td>
+                                <td>1016287965 bytes</td>
+                                <td>a0385560ffb7080c9ffd571dc47aab6817a45441cefcc11a6b6760ee8b4e2cb1</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.5/android-studio-ide-173.4640885-mac.zip">android-studio-ide-173.4640885-mac.dmg</a>
+                                </td>
+                                <td>960707087 bytes</td>
+                                <td>dc590c058f240f83ff68eb34eacf8d3e9b2486618aa04d08f38c2afef2e938e5</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.5/android-studio-ide-173.4640885-linux.zip">android-studio-ide-173.4640885-linux.zip</a>
+                                </td>
+                                <td>975256356 bytes</td>
+                                <td>680e79511943b6870c8085db0314c3d28da264fa31e9046a2b27c50d5b9872b9</td>
+                            </tr>
                             <!-- 3.1 RC2 -->
                             <tr>
                                 <td rowspan="5">3.1 RC2</td>
