Add GeekTime ad info

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
     </header>
     <div id="auto-scroll-ad-box" style="z-index: 10; right: 0px; position: absolute; top: 1012px;">
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="https://mp.weixin.qq.com/s/79meIJKrbPysafJufBnSXg" title="TensorFlow 官方微信公众号" onclick="trackOutboundLink('https://mp.weixin.qq.com/s/79meIJKrbPysafJufBnSXg', 'AD-TensorFlow-Wechat-QRCode', 'click');" target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tNc79ly1fml2ip3fa1j303m03mgll.jpg">
             </a>
@@ -185,11 +185,16 @@
             </a>
         </div>
         <div class="ad-float-right">
+            <a href="#" title="深入浅出区块链-陈浩／元界 CTO，主导并实现了中国第一条公有链，36 节课／5大模块／写出你的第一个区块链项目" onclick="trackOutboundLink('', 'AD-JiKeShiJian', 'click');" target="_blank">
+                <img src="https://ws2.sinaimg.cn/large/006tNc79ly1fpkkpcg8poj303m06f3yn.jpg">
+            </a>
+        </div>
+        <div class="ad-float-right">
             <a href="https://otcbtc.com/referrals/INFERJAY" title="扫码注册，领比特币红包，OTCBTC 最流畅、最靠谱、最好用的场外交易平台。" onclick="trackOutboundLink('https://otcbtc.com/referrals/INFERJAY', 'AD-OTCBTC-Redpacket', 'click');" target="_blank">
                 <img src="https://ws1.sinaimg.cn/large/006tNc79ly1fmvgx80nrej303m05tmxv.jpg">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="#" title="支付宝扫码领红包，天天可领，想花就花" onclick="trackOutboundLink('Alipayhongbao.com', 'AD-AliPay-HB', 'click');" target="_blank">
                 <img src="https://ws3.sinaimg.cn/large/006tNc79ly1fls1eov2jej303m0480ta.jpg">
             </a>
