Add Android Studio 3.2 Canary 9、3.1.1 and Canary 10 link

--- a/index.html
+++ b/index.html
@@ -356,6 +356,111 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Canary 10 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 10</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.9/android-studio-ide-181.4705630-windows.zip">android-studio-ide-181.4705630-windows.zip</a>
+                                </td>
+                                <td>1012200759 bytes</td>
+                                <td>185c463f162a7e7941fd478c386e082610b489ac934436a30d7b75c72eb458dc</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1fq8s6hibxvj31kw0otqb0.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.9/android-studio-ide-181.4705630-windows32.zip">android-studio-ide-181.4705630-windows32.zip</a>
+                                </td>
+                                <td>1011672970 bytes</td>
+                                <td>f61180ee820bc8168d428fc7a107caa72a9c727c9fd85f30283ebe3b25f60add</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.9/android-studio-ide-181.4705630-mac.zip">android-studio-ide-181.4705630-mac.dmg</a>
+                                </td>
+                                <td>1004275127 bytes</td>
+                                <td>01e1c88036dcc50310d8689d4675c93ea7f127bbfef3dab04a50f72303dc0765</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.9/android-studio-ide-181.4705630-linux.zip">android-studio-ide-181.4705630-linux.zip</a>
+                                </td>
+                                <td>1017951844 bytes</td>
+                                <td>9cebc1390b955448f57d540e6cac1824ab77d9c5c76215cd29336f0e1c00ae1f</td>
+                            </tr>
+                            <!-- 3.1.1  -->
+                            <tr>
+                                <td rowspan="5">3.1.1</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.1.0/android-studio-ide-173.4697961-windows.zip">android-studio-ide-173.4697961-windows.zip</a>
+                                </td>
+                                <td>794903192 bytes</td>
+                                <td>bad2e9d2b522ccc930dcaa60c817167a709658a6c434ee0eb452cf8b6cd444b6</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tNc79ly1fq8s8q0rbmj31kw0nc7cz.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.1.0/android-studio-ide-173.4697961-windows32.zip">android-studio-ide-173.4697961-windows32.zip</a>
+                                </td>
+                                <td>895135571 bytes</td>
+                                <td>c9e34eba49a27e29b93ebf626e6c29142b1f312f92cbc0faf33362741ff13e89</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.1.0/android-studio-ide-173.4697961-mac.zip">android-studio-ide-173.4697961-mac.dmg</a>
+                                </td>
+                                <td>889099229 bytes</td>
+                                <td>5b4eaf3e8299b224234cae5072bdbb972fab5db6faf9dd40d798bdbd3fb676fc</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.1.0/android-studio-ide-173.4697961-linux.zip">android-studio-ide-173.4697961-linux.zip</a>
+                                </td>
+                                <td>894046861 bytes</td>
+                                <td>08539019cda4f9228f6e08d9fda8933a71ecae29eac75f8d31e743816315c076</td>
+                            </tr>
+                            <!-- 3.2 Canary 9 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 9</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.8/android-studio-ide-173.4688006-windows.zip">android-studio-ide-173.4688006-windows.zip</a>
+                                </td>
+                                <td>972855748 bytes</td>
+                                <td>d5e5edd2251b5af9e45ac9206633051b72bb61357f7da60ba8f495e76c38320f</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tNc79ly1fq8s6zvschj31kw0ggdma.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.8/android-studio-ide-173.4688006-windows32.zip">android-studio-ide-173.4688006-windows32.zip</a>
+                                </td>
+                                <td>972327959 bytes</td>
+                                <td>2af53e7783cc5ff372877fd1ec58aa31ea3f769167ea2b4e4fda4b5233d617b7</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.8/android-studio-ide-173.4688006-mac.zip">android-studio-ide-173.4688006-mac.dmg</a>
+                                </td>
+                                <td>964916596 bytes</td>
+                                <td>94b0ca4249680c92752083fc6a94a42eccf14d999c282e32337a0cff61b16be5</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.8/android-studio-ide-173.4688006-linux.zip">android-studio-ide-173.4688006-linux.zip</a>
+                                </td>
+                                <td>978606914 bytes</td>
+                                <td>9b6a5bdbaeeb13a1cc70e7be8f1e35b10aca63db0b28f64889ede34274b1748e</td>
+                            </tr>
                             <!-- 3.2 Canary 8 -->
                             <tr>
                                 <td rowspan="5">3.2 Canary 8</td>
@@ -428,76 +533,7 @@
                                 <td>894043298 bytes</td>
                                 <td>de2587bf5471695c8a411f979e6247c0d552ce14f5ca9de82ddeb3dc946f14c4</td>
                             </tr>
-                            <!-- 3.2 Canary 7 -->
-                            <tr>
-                                <td rowspan="5">3.2 Canary 7</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.6/android-studio-ide-173.4658582-windows.zip">android-studio-ide-173.4658582-windows.zip</a>
-                                </td>
-                                <td>970078719 bytes</td>
-                                <td>a0b3339be0dbea41a536da1dd1eeaa58047dab2ad62416a8431e6745140cc792</td>
-                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1fprav7voxij31kw0gpn3v.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.6/android-studio-ide-173.4658582-windows32.zip">android-studio-ide-173.4658582-windows32.zip</a>
-                                </td>
-                                <td>969550930 bytes</td>
-                                <td>49fc35597fe4e858dc4adffe458254cfe596a9324e7146b71d0e1d98d14bd6b3</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.6/android-studio-ide-173.4658582-mac.zip">android-studio-ide-173.4658582-mac.dmg</a>
-                                </td>
-                                <td>961312523 bytes</td>
-                                <td>24794c3e18bf56f9158fbbe391b6cf835e2793a0117c3d50ea819ce2fd21cfd1</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.6/android-studio-ide-173.4658582-linux.zip">android-studio-ide-173.4658582-linux.zip</a>
-                                </td>
-                                <td>975804729 bytes</td>
-                                <td>68d04b1bcc46339cb36990ca21709322b6375b6b6ebad2dc2cbea6550bd7da28</td>
-                            </tr>
-                            <!-- 3.1 RC3 -->
-                            <tr>
-                                <td rowspan="5">3.1 RC3</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.15/android-studio-ide-173.4658569-windows.zip">android-studio-ide-173.4658569-windows.zip</a>
-                                </td>
-                                <td>895660569 bytes</td>
-                                <td>bedac5cf4a74274f60c26b40210833c2d7b69a6858232878e6263353df2d9695</td>
-                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1fprash4wvqj31kw0hl450.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.15/android-studio-ide-173.4658569-windows32.zip">android-studio-ide-173.4658569-windows32.zip</a>
-                                </td>
-                                <td>895131072 bytes</td>
-                                <td>12df60b8b86f3febb931060eba2e1f17bf43041da4207615747117c7de9f5272</td>
-                            </tr>
-                            <tr>
-                                <td>Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.15/android-studio-ide-173.4658569-mac.zip">android-studio-ide-173.4658569-mac.dmg</a>
-                                </td>
-                                <td>894346188 bytes</td>
-                                <td>e6646e280f3f4dc1b61d855060307833e23300ce3516a059df5637d660b8ef54</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.15/android-studio-ide-173.4658569-linux.zip">android-studio-ide-173.4658569-linux.zip</a>
-                                </td>
-                                <td>894042356 bytes</td>
-                                <td>38e312eb735b663c0eaa486f3734f78781f3c7d5b6462157209166b8cb3c784b</td>
-                            </tr>
+
                             <!-- 3.0.1 正式版 -->
                             <tr>
                                 <td rowspan="5">3.0.1 正式版</td>
