remove android sdk mirror info

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     <p>欢迎大家推荐自己在Android开发过程中用的好用的工具、学习开发教程、用到设计素材。如果你觉得本站对你有用，你可以点击底部的分享按钮，把本站分享到社交网络让你的小伙伴和更多的人知道。</p>
                     <p>或者可以考虑对本站<a href="./donate.html"><strong>捐赠</strong></a>支持下，支持我把本站做的更好，帮助更多的人。目前支持支付宝和微信，金额随意。</p>
                 </div>
-                <div id="android-dev-tools">
+                <div id="android-dev-tools" class="hide">
                     <h2>Android Tools</h2>
                     <div id="android-sdk-online-server">
                         <h4>Android SDK在线更新镜像服务器</h4>
