Add Android Stuido 3.2 canary 11/12 and 3.1.2 links

--- a/index.html
+++ b/index.html
@@ -356,6 +356,111 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.1.2 正式版 -->
+                            <tr>
+                                <td rowspan="5">3.1.2 正式版</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.2.0/android-studio-ide-181.4720098-windows.zip">android-studio-ide-173.4720617-windows.zip</a>
+                                </td>
+                                <td>794908256 bytes</td>
+                                <td>e2695b73300ec398325cc5f242c6ecfd6e84db190b7d48e6e78a8b0115d49b0d</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1fqo490944pj31kw0niwnv.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.2.0/android-studio-ide-173.4720617-windows32.zip">android-studio-ide-173.4720617-windows32.zip</a>
+                                </td>
+                                <td>895141616 bytes</td>
+                                <td>c238f54f795db03f9d4a4077464bd9303113504327d5878b27c9e965676c6473</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.2.0/android-studio-ide-173.4720617-mac.zip">android-studio-ide-173.4720617-mac.dmg</a>
+                                </td>
+                                <td>794908256 bytes</td>
+                                <td>79cf15045114db68b70c5aeed3f0a9097b3dabd9d135e5f3f85d69810d51ae28</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.2.0/android-studio-ide-173.4720617-linux.zip">android-studio-ide-173.4720617-linux.zip</a>
+                                </td>
+                                <td>894052929 bytes</td>
+                                <td>13f290279790df570bb6592f72a979a495f7591960a378abea7876ece7252ec1</td>
+                            </tr>
+                            <!-- 3.2 Canary 12 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 12</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.11/android-studio-ide-181.4720098-windows.zip">android-studio-ide-181.4729833-windows.zip</a>
+                                </td>
+                                <td>1027848496 bytes</td>
+                                <td>9cea17426f232c551976198701de4226f8f270530c30495589990b1ada29b29c</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1fqo2o14qjhj31kw0fr0za.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.11/android-studio-ide-181.4729833-windows32.zip">android-studio-ide-181.4729833-windows32.zip</a>
+                                </td>
+                                <td>1027320707 bytes</td>
+                                <td>3b73bdabad93856a2b4c5706e1fd26d16ed2fc06ca20566460acea5e83076e9d</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.11/android-studio-ide-181.4729833-mac.zip">android-studio-ide-181.4729833-mac.dmg</a>
+                                </td>
+                                <td>1019444850 bytes</td>
+                                <td>60782212107ad1bede1c9f97c5c7fee608ccee19e9bd8fb127ae207809bcc230</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.11/android-studio-ide-181.4729833-linux.zip">android-studio-ide-181.4729833-linux.zip</a>
+                                </td>
+                                <td>1033664506 bytes</td>
+                                <td>8c98f9018cf59faa0e1d2faf39bdad187166088b0d4a5506bd6088964a3527ad</td>
+                            </tr>
+                            <!-- 3.2 Canary 11 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 11</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.10/android-studio-ide-181.4720098-windows.zip">android-studio-ide-181.4720098-windows.zip</a>
+                                </td>
+                                <td>1023644020 bytes</td>
+                                <td>45b11e7680c4752c979675f0a88c17f612f8e8d6084ccc6a386c9464cc5ae6ea</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1fq8s6hibxvj31kw0otqb0.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.10/android-studio-ide-181.4720098-windows32.zip">android-studio-ide-181.4720098-windows32.zip</a>
+                                </td>
+                                <td>1023116231 bytes</td>
+                                <td>0ce9d1d7e90b94d1f7b60436c0b918cd6dda56ed0131531056c827da0ad4137e</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.10/android-studio-ide-181.4720098-mac.zip">android-studio-ide-181.4720098-mac.dmg</a>
+                                </td>
+                                <td>1015240364 bytes</td>
+                                <td>1d18016c7ec51ea1aee48b0812073629685cd0ebe4fc10eb9701fdbd0d253e29</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.10/android-studio-ide-181.4720098-linux.zip">android-studio-ide-181.4720098-linux.zip</a>
+                                </td>
+                                <td>1029395123 bytes</td>
+                                <td>bc63b0e6f36d8b719f3ca15027ff617a4feb861a4105fd5832f16afb1b3e8d01</td>
+                            </tr>
                             <!-- 3.2 Canary 10 -->
                             <tr>
                                 <td rowspan="5">3.2 Canary 10</td>
