Add Android studio 3.2 canary 13

--- a/index.html
+++ b/index.html
@@ -356,6 +356,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Canary 13 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 13</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.12/android-studio-ide-181.4749738-windows.zip">android-studio-ide-181.4749738-windows.zip</a>
+                                </td>
+                                <td>1029950560 bytes</td>
+                                <td>9445d13ce4d3c59a43f1714bc49e425332073b98f98d15f719089beed834b7aa</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1fqxvh3hu70j31kw0kdwm6.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.12/android-studio-ide-181.4749738-windows32.zip">android-studio-ide-181.4749738-windows32.zip</a>
+                                </td>
+                                <td>1029422865 bytes</td>
+                                <td>797170b79c8aa9753a29b3cbb54f2a2e24b6f5fc10095725899107fc939e6c76</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.12/android-studio-ide-181.4749738-mac.zip">android-studio-ide-181.4749738-mac.dmg</a>
+                                </td>
+                                <td>1021549926 bytes</td>
+                                <td>e2d0048a6fd13eba72eb2f639d1686f1440d019e142ad9f4ecc412d396a563ed</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.12/android-studio-ide-181.4749738-linux.zip">android-studio-ide-181.4749738-linux.zip</a>
+                                </td>
+                                <td>1035872483 bytes</td>
+                                <td>205074d1d695baa4f0476e770bd475671bf2ef76f54e36df56fee8fc7b5d9a57</td>
+                            </tr>
                             <!-- 3.1.2 正式版 -->
                             <tr>
                                 <td rowspan="5">3.1.2 正式版</td>
