--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@
             </a>
         </div>
         <div class="ad-float-right">
+            <a href="https://time.geekbang.org/column/intro/82?code=l8dD2lIUPczT%2Ftrb%2BPsyoxe%2BmZWnGlTNHk5kaM%2FbLwg%3D" title="Oracle首席工程师带你修炼 Java 内功" onclick="trackOutboundLink('https://time.geekbang.org/column/intro/82?code=l8dD2lIUPczT%2Ftrb%2BPsyoxe%2BmZWnGlTNHk5kaM%2FbLwg%3D', 'AD-JiKeShiJian-Java-Core-36', 'click');"
+                target="_blank">
+                <img src="https://ws4.sinaimg.cn/large/006tNc79ly1fqxwpxb5d2j303m05tq3o.jpg">
+            </a>
+        </div>
+        <div class="ad-float-right hide">
             <a href="#" title="深入浅出区块链-陈浩／元界 CTO，主导并实现了中国第一条公有链，36 节课／5大模块／写出你的第一个区块链项目" onclick="trackOutboundLink('', 'AD-JiKeShiJian', 'click');" target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tNc79ly1fpkkpcg8poj303m06f3yn.jpg">
             </a>
