--- a/index.html
+++ b/index.html
@@ -362,6 +362,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Canary 14 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 14</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.13/android-studio-ide-181.4763614-windows.zip">android-studio-ide-181.4763614-windows.zip</a>
+                                </td>
+                                <td>1031862265 bytes</td>
+                                <td>f11a90b3423ebe823e933370f8c07be8477bfece2e78606aa05833f42b2d4ee5</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1fr4w61xt52j30r90dx0vg.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.13/android-studio-ide-181.4763614-windows32.zip">android-studio-ide-181.4763614-windows32.zip</a>
+                                </td>
+                                <td>1031334570 bytes</td>
+                                <td>c45ed5b5a70b219382502883263558672988c54e31d14652b44787dc04e85a08</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.13/android-studio-ide-181.4763614-mac.zip">android-studio-ide-181.4763614-mac.dmg</a>
+                                </td>
+                                <td>1023462200 bytes</td>
+                                <td>37c004d02c171669756a8e04b0bf00ddec3bcb4e00d5a589e8cfafd3b1287fb0</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.13/android-studio-ide-181.4763614-linux.zip">android-studio-ide-181.4763614-linux.zip</a>
+                                </td>
+                                <td>1037784251 bytes</td>
+                                <td>d0db7ee0fa70efeabeb3d831c5ffa99be202e4eed388077922631f556e5ca3e7</td>
+                            </tr>
                             <!-- 3.2 Canary 13 -->
                             <tr>
                                 <td rowspan="5">3.2 Canary 13</td>
