Add Android Studio 3.2 Canary 15

--- a/index.html
+++ b/index.html
@@ -362,6 +362,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Canary 15 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 15</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.14/android-studio-ide-181.4773949-windows.zip">android-studio-ide-181.4773949-windows.zip</a>
+                                </td>
+                                <td>1035600090 bytes</td>
+                                <td>c44f628006bf9e6ce9d4503b91c6d3b1dea768cb900c591240bb4d1609cb4bf4</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1frft75cqyaj31kw0tqgsp.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.14/android-studio-ide-181.4773949-windows32.zip">android-studio-ide-181.4773949-windows32.zip</a>
+                                </td>
+                                <td>1035072395 bytes</td>
+                                <td>8e96eee1de715a67abbcaf2827f859a2293a427b9dd45378117ba4b8ae1d0a7c</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.14/android-studio-ide-181.4773949-mac.zip">android-studio-ide-181.4773949-mac.dmg</a>
+                                </td>
+                                <td>1027255150 bytes</td>
+                                <td>6417dbb6aafb75e92c1df64d6b181e3e79ba41b8250138fe30e406b8fd178e16</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.14/android-studio-ide-181.4773949-linux.zip">android-studio-ide-181.4773949-linux.zip</a>
+                                </td>
+                                <td>1041712697 bytes</td>
+                                <td>b30e578b16eb8eb9b3ba7cde5f1cdac7c06fd327d34b24275204eeddb4f19082</td>
+                            </tr>
                             <!-- 3.2 Canary 14 -->
                             <tr>
                                 <td rowspan="5">3.2 Canary 14</td>
