Add Android Studio 3.2 Canary 16

--- a/index.html
+++ b/index.html
@@ -362,6 +362,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Canary 16 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 16</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.15/android-studio-ide-181.4802120-windows.zip">android-studio-ide-181.4802120-windows.zip</a>
+                                </td>
+                                <td>1037815112 bytes</td>
+                                <td>e2e00b6ac1a9ce563934dc97210966efa5a936a440f6550f83f941f11f0744f1</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tKfTcgy1fs1gyq8o8xj31kw0q0jyg.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.15/android-studio-ide-181.4802120-windows32.zip">android-studio-ide-181.4802120-windows32.zip</a>
+                                </td>
+                                <td>1037287417 bytes</td>
+                                <td>5f16fe37d19f7d154fecbd52871457418be6ac87366bd8d86112f54b9bb73512</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.15/android-studio-ide-181.4802120-mac.zip">android-studio-ide-181.4802120-mac.dmg</a>
+                                </td>
+                                <td>1029471428 bytes</td>
+                                <td>245a49425956dafda57c2db1228f95146db01403263ab334b000252170e3eb33</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.15/android-studio-ide-181.4802120-linux.zip">android-studio-ide-181.4802120-linux.zip</a>
+                                </td>
+                                <td>1043927586 bytes</td>
+                                <td>d5dfba554402e8d0e7c0690b58dde044cce821ebbe1783ed6d034d54b0940932</td>
+                            </tr>
                             <!-- 3.2 Canary 15 -->
                             <tr>
                                 <td rowspan="5">3.2 Canary 15</td>
